{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 211,
  "lineage": "947a020b-661b-13fb-6860-1dd163192ab8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0476f2ee0a10d89bc",
            "arn": "arn:aws:ec2:us-east-1:555065207695:instance/i-083f62a28240c2389",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-globo-web-app-80255-ec2_read_s3_profile",
            "id": "i-083f62a28240c2389",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e6e3f4d215865df",
            "private_dns": "ip-10-0-0-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.49",
            "public_dns": "ec2-34-229-203-81.compute-1.amazonaws.com",
            "public_ip": "34.229.203.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0399049da544840aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8863143088e7f11",
            "tags": {
              "Name": "dev-globo-web-app-ec2-1",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-ec2-1",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d07866815ca7cc42"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0476f2ee0a10d89bc",
            "arn": "arn:aws:ec2:us-east-1:555065207695:instance/i-0835d54f60060e139",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-globo-web-app-80255-ec2_read_s3_profile",
            "id": "i-0835d54f60060e139",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0228eff138a92731a",
            "private_dns": "ip-10-0-1-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-3-94-83-208.compute-1.amazonaws.com",
            "public_ip": "3.94.83.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd2c32952c3af0ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cde5f2f7e2945016",
            "tags": {
              "Name": "dev-globo-web-app-ec2-2",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-ec2-2",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d07866815ca7cc42"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-globo-web-app-80255",
                "enabled": true,
                "prefix": "lb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/dev-globo-web-app-lb/8e78f077b9b4cd89",
            "arn_suffix": "app/dev-globo-web-app-lb/8e78f077b9b4cd89",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-globo-web-app-lb-1672530713.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/dev-globo-web-app-lb/8e78f077b9b4cd89",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-globo-web-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-007f0fe2a1422a449"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c8863143088e7f11"
              },
              {
                "subnet_id": "subnet-0cde5f2f7e2945016"
              }
            ],
            "subnets": [
              "subnet-0c8863143088e7f11",
              "subnet-0cde5f2f7e2945016"
            ],
            "tags": {
              "Name": "dev-globo-web-app-lb",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-lb",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0ff3a0407268b6374",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "data.aws_availability_zones.available",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:listener/app/dev-globo-web-app-lb/8e78f077b9b4cd89/1347876969e2811a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/42de55ee8524679b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:listener/app/dev-globo-web-app-lb/8e78f077b9b4cd89/1347876969e2811a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/dev-globo-web-app-lb/8e78f077b9b4cd89",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "dev-globo-web-app-listener",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-listener",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.lb_sg",
            "data.aws_availability_zones.available",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/42de55ee8524679b",
            "arn_suffix": "targetgroup/dev-globo-web-app-tg/42de55ee8524679b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/42de55ee8524679b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-globo-web-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-globo-web-app-tg",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-tg",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/42de55ee8524679b-20230802082746720000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/42de55ee8524679b",
            "target_id": "i-083f62a28240c2389"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/42de55ee8524679b-20230802082747128600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/42de55ee8524679b",
            "target_id": "i-0835d54f60060e139"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-007f0fe2a1422a449",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007f0fe2a1422a449",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-globo-web-app-lb-sg",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-globo-web-app-lb-sg",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-lb-sg",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-0d07866815ca7cc42",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d07866815ca7cc42",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-globo-web-app-ec2-sg",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-globo-web-app-ec2-sg",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-ec2-sg",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:network-acl/acl-03b6b126b8ade331f",
            "default_network_acl_id": "acl-03b6b126b8ade331f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03b6b126b8ade331f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "555065207695",
            "subnet_ids": [
              "subnet-0c8863143088e7f11",
              "subnet-0cde5f2f7e2945016"
            ],
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:route-table/rtb-06d04b07fb8c36f30",
            "default_route_table_id": "rtb-06d04b07fb8c36f30",
            "id": "rtb-06d04b07fb8c36f30",
            "owner_id": "555065207695",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-09b5467dbf225eac1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09b5467dbf225eac1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:internet-gateway/igw-0dbb7dc4de090e333",
            "id": "igw-0dbb7dc4de090e333",
            "owner_id": "555065207695",
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dbb7dc4de090e333",
            "id": "r-rtb-07df7a23c9ec0512b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07df7a23c9ec0512b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:route-table/rtb-07df7a23c9ec0512b",
            "id": "rtb-07df7a23c9ec0512b",
            "owner_id": "555065207695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b38c280e390dad90",
            "route_table_id": "rtb-07df7a23c9ec0512b",
            "subnet_id": "subnet-0c8863143088e7f11"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023aeb73e81acaeb2",
            "route_table_id": "rtb-07df7a23c9ec0512b",
            "subnet_id": "subnet-0cde5f2f7e2945016"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:subnet/subnet-0c8863143088e7f11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8863143088e7f11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555065207695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:subnet/subnet-0cde5f2f7e2945016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde5f2f7e2945016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555065207695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0ff3a0407268b6374"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:vpc/vpc-0ff3a0407268b6374",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b6b126b8ade331f",
            "default_route_table_id": "rtb-06d04b07fb8c36f30",
            "default_security_group_id": "sg-09b5467dbf225eac1",
            "dhcp_options_id": "dopt-0aad078b2c96e0168",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff3a0407268b6374",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d04b07fb8c36f30",
            "owner_id": "555065207695",
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "Terraform": "true",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            }
          }
        }
      ]
    }
  ]
}